Restore and update CSS styles

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ span{
 
 /* Hero Section */
 .hero-section {
-    background-image: url("shop.jpg");
+    background-image: url("images/shop.jpg");
     background-size: cover;
     height: 380px;
     display: flex;
@@ -307,4 +307,5 @@ padding-top: 5px;
         margin-bottom: 20px;
     }
 }
+
 
